# readingview

./: .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore  API.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  GETTING_STARTED.md  LOCAL_DEVELOPMENT.md  Makefile  NOTIFICATIONS.md  OPEN_LIBRARY_USER_GUIDE.md  PROJECT_INDEX.md  PROJECT_OVERVIEW.txt  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_CHECKLIST.md  app.py  config.py  docker-build.yml  docker-compose.yml  entrypoint.sh  env.example  requirements.txt  setup.py  setup_github.sh  unraid-template.xml
.forgejo/workflows/: ci.yml  docker-build.yml
.github/workflows/: docker-build.yml
api/: audiobookshelf.py  openlibrary.py
backend/: .coverage  Makefile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_settings.py  0002_create_authors.py  0003_create_releases.py  0004_create_collections.py  0005_add_recommender_explanations.py  0006_create_reading_goals.py  0006_rename_llm_api_key_enc.py  0007_add_recommender_config_hash.py  0008_rename_llm_api_key_enc.py  0009_create_book_notes.py  0010_add_releases_refresh_cron.py
backend/app/: config.py  crypto.py  db.py  main.py
backend/app/api/: authors.py  backup.py  cache.py  collections.py  connections.py  covers.py  deps.py  goals.py  health.py  library.py  narrators.py  notes.py  notifications.py  recommendations.py  releases.py  series.py  settings.py  statistics.py  ws.py
backend/app/models/: __init__.py  authors.py  collections.py  goals.py  notes.py  releases.py  settings.py
backend/app/schemas/: authors.py  collections.py  goals.py  library.py  narrators.py  notes.py  notifications.py  releases.py  series.py  settings.py  statistics.py
backend/app/services/: abs_cache.py  abs_socket.py  audiobookshelf.py  authors.py  cover_cache.py  narrators.py  notify.py  openlibrary.py  recommendations.py  release_tracker.py  scheduler.py  series.py  statistics.py
backend/book_recommender/: __init__.py  _config.py  _db.py  _exceptions.py  _explanations.py  _ingestion.py  _ollama.py  _openlibrary_sync.py  _vector.py  service.py
backend/tests/: conftest.py  test_abs_routes.py  test_audiobookshelf.py  test_backup.py  test_collections.py  test_connections.py  test_covers.py  test_goals.py  test_health.py  test_library.py  test_narrators_service.py  test_notifications_routes.py  test_notify_service.py  test_openlibrary.py  test_recommendations.py  test_recommendations_service.py  test_release_tracker.py  test_releases.py  test_routing.py  test_scheduler.py  test_series.py  test_settings.py  test_statistics.py  test_ws.py
book_recommender/: __init__.py  _config.py  _db.py  _exceptions.py  _explanations.py  _ingestion.py  _ollama.py  _vector.py  service.py
components/: authors.py  collections.py  dashboard.py  library.py  narrators.py  notifications.py  recommendations.py  release_tracker.py  series_tracker.py  statistics.py
config/: config.py
database/: db.py  release_tracker.db
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.js
frontend/public/: openapi.json
frontend/scripts/: openapi-verify.mjs  openapi.js
frontend/src/: App.tsx  (+1 more)
utils/: helpers.py  notifications.py  scheduler.py
(+46 files in other folders)
