[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "readingview"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["S101"]

[tool.mypy]
strict = true
python_version = "3.12"
exclude = ["alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["venv", "alembic"]
skips = []
