[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "readingview"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "alembic>=1.14",
    "cryptography>=43",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "mypy>=1.13",
    "ruff>=0.9",
    "bandit>=1.8",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["S101"]

[tool.mypy]
strict = true
python_version = "3.12"
exclude = ["alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["venv", "alembic"]
skips = []
