[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "book_recommender*"]

[project]
name = "readingview"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "urllib3>=2.7.0",
    "alembic>=1.14",
    "cryptography>=43",
    "python-multipart>=0.0.9",
    "apscheduler>=3.10",
    "apprise>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "mypy>=1.13",
    "ruff>=0.9",
    "bandit>=1.8",
    "pip-audit>=2.7",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B"]
extend-ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105"]

[tool.mypy]
strict = true
python_version = "3.12"
exclude = ["alembic/"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: pure logic tests with no I/O",
    "integration: requires external services (ABS, Open Library) — skipped in CI",
]

[tool.bandit]
exclude_dirs = ["venv", "alembic", "tests"]
skips = []
